2021-12-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * version.sh: Update shared library versioning information for
        forthcoming 1.3.37 release.

        * scripts/graphicsmagick_snapshot_copy-ssh: Sample
        graphicsmagick_snapshot_copy script which uses scp to copy
        snapshot files to a directory at a remote host, and then rsync
        over ssh from there to SourceForge.  Copy to a local script
        directory and edit to suit local requirements.

        * scripts/graphicsmagick_snapshot_copy-local: Sample
        graphicsmagick_snapshot_copy script to copy snapshot files to a
        local directory and then rsync over ssh to SourceForge.  Copy to a
        local script directory and edit to suit local requirements.

        * Makefile.am (snapshot): Rely on the graphicsmagick_snapshot_copy
        script to reduce files we don't care to distribute so that all
        targets are still produced.

        * coders/jp2.c (alloc_rlm): JasPer expects its allocator to return
        non-null for zero size

2021-12-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * Makefile.am (snapshot): Update the snapshot target to distribute
        a minimal set of files.

        * magick/symbols.h: Update the list of Gm prefixed symbols.

        * NEWS.txt: Updated with changes until today.

2021-12-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * www/index.rst: Development snapshots are now at SourceForge.

        * www/download.rst, www/index.rst, README.txt: Remove references
        to ftp.graphicsmagick.org, which was shut down due to continuing
        abusive practices and lack of support from the user community.

2021-12-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * magick/memory-private.h
        (MagickAllocateResourceLimitedMemoryAttribute): Remove extraneous
        comma.

        * coders/wpg.c (LoadWPG2Flags): Fix comment type and whitespace
        issues.
