@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020211212"
-#define public MagickPackageReleaseDate "snapshot-20211212"
+#define public MagickPackageVersionAddendum ".020211214"
+#define public MagickPackageReleaseDate "snapshot-20211214"
