@@ -38,8 +38,8 @@ extern "C" {
 #define MagickLibVersion  0x262300
 #define MagickLibVersionText  "1.4"
 #define MagickLibVersionNumber 26,23,0
-#define MagickChangeDate   "20211212"
-#define MagickReleaseDate  "snapshot-20211212"
+#define MagickChangeDate   "20211214"
+#define MagickReleaseDate  "snapshot-20211214"
 
 /*
   The MagickLibInterfaceNewest and MagickLibInterfaceOldest defines
