@@ -160,8 +160,8 @@ block SVG renderer access to read local image files.</p>
 <div class="section" id="pgp-public-key">
 <h1>PGP Public Key</h1>
 <p>The following PGP public key (belonging to Bob Friesenhahn) is used to
-sign release files on the ftp site and may be used for private
-correspondence:</p>
+sign release files (there is an associated .sig file) and may be used
+for private correspondence:</p>
 <pre class="literal-block">
 -----BEGIN PGP PUBLIC KEY BLOCK-----
 
